--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,13 +3,15 @@
 @tailwind utilities;
 
 input,
-textarea {
+textarea,
+select {
   @apply w-full rounded-md border-2 border-gray-300 px-1;
   @apply mb-2;
 }
 
 input:focus,
-textarea:focus {
+textarea:focus,
+select:focus {
   @apply border-blue-900;
 }
 
