--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,7 +20,7 @@ h1 {
 }
 
 label {
-  @apply text-blue-900;
+  @apply bg-white text-blue-900;
 }
 
 img {
@@ -28,19 +28,19 @@ img {
 }
 
 .btn-primary {
-  @apply rounded-md bg-blue-900 px-4 py-1 text-white;
+  @apply rounded-sm bg-primary px-4 py-1 text-white;
 }
 
 table.basic {
-  @apply w-full;
+  @apply w-full rounded-sm bg-white shadow-md;
 }
 
 table.basic thead tr td {
-  @apply bg-blue-100;
+  @apply border-b border-gray-200 px-4 py-2 text-sm uppercase text-gray-600;
 }
 
 table.basic tr td {
-  @apply border border-blue-200 p-1;
+  @apply px-4 py-1;
 }
 
 table.basic a {
